# dudlc

./: .cvsignore  .gitignore  LICENSE  Makefile.am  README  RELEASE  TODO  configure.ac  dudl_filter.man
cli/: .cvsignore  .gitignore  Makefile  Makefile.am  TODO  cmd.c  cmd.h  command.c  command.h  configure.ac  dudlc.conf.man  dudlc.man  events.c  events.h  formatter.c  formatter.h  input.c  main.c  main.h  mservcli.c  mservcli.h  options.c  options.h  proto.c  proto.h  server.c  server.h  tty.c  tty.h
cmd/: .cvsignore  .gitignore  Makefile.am  cgen.c  command.c  dudl_cmd.man  dudlccmd.h  formatter.c  idlist.c  idlist.h  msg.c  parseval.c  parseval.h
debian/: .cvsignore  .gitignore  README.Debian  changelog  control  copyright  dudl-client.files  dudl-gtk.files  dudl-lirc.default  dudl-lirc.dirs  dudl-lirc.examples  dudl-lirc.files  dudl-lirc.init  rules  shlibs.local
gtk/: .cvsignore  .gitignore  Makefile.am  album.c  artist.c  browse.c  cellfunc.c  childwindow.c  common.h  context.c  curalbums.c  curtracks.c  gtkdudlc.man  main.c  options.c  playbox.c  playbox.h  queue.c  queuewin.c  sortfunc.c  track.c  tracksearch.c  treehelper.c
ir/: .cvsignore  .gitignore  Makefile.am  irdudl.conf  irdudl.man  main.c
lib/: .cvsignore  .gitignore  Makefile  Makefile.am  album.c  artist.c  artist.h  client.c  client.h  command.h  configure.ac  dudlc.h  event.c  event.h  help.c  help.h  history.c  history.h  iterate.c  iterate.h  player.c  player.h  proto.c  proto.h  queue.c  queue.h  random.c  random.h  session.c  sfilter.c  sleep.c  sleep.h  sock.c  sock.h  tag.c  tag.h  track.c  track.h  user.c  user.h
lib/dudlc/: .cvsignore  .gitignore  Makefile.am  album.h  artist.h  client.h  command.h  event.h  help.h  history.h  iterate.h  player.h  proto.h  queue.h  random.h  session.h  sfilter.h  sleep.h  sock.h  tag.h  track.h  user.h
